--- a/Templates/artigosAcademicos.html
+++ b/Templates/artigosAcademicos.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-<link rel="stylesheet" href="/css/header.css">
-<link rel="stylesheet" href="/css/media(mobile).css">
-<link rel="stylesheet" href="/css/media(tablet).css">
-<link rel="stylesheet" href="/css/posts.css">
-<link rel="stylesheet" href="/css/footer.css">
-<link rel="stylesheet" href="/css/artigos.css">
-<link rel="stylesheet" href="/css/contato.css">
-<link rel="stylesheet" href="/css/sobremim.css">
+<link rel="stylesheet" href="/templates/css/header.css">
+<link rel="stylesheet" href="/templates/css/media(mobile).css">
+<link rel="stylesheet" href="/templates/css/media(tablet).css">
+<link rel="stylesheet" href="/templates/css/posts.css">
+<link rel="stylesheet" href="/templates/css/footer.css">
+<link rel="stylesheet" href="/templates/css/artigos.css">
+<link rel="stylesheet" href="/templates/css/contato.css">
+<link rel="stylesheet" href="/templates/css/sobremim.css">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
@@ -24,7 +24,7 @@
 <ul class="menu-ul">
     <li><a href="cesar.html">Home</a></li>
     <li><a href="artigos.html">Matérias</a></li>
-    <li><a href="artigos.html">Artigos Acadêmicos</a></li>
+    <li><a href="artigosAcademicos.html">Artigos Acadêmicos</a></li>
     <li><a href="sobremim.html">Sobre mim</a></li>
     <li><a href="contato.html">Contato</a></li>
     <li><a class="modal-login" href="#">Login/Registrar-se</a></li>
@@ -52,8 +52,7 @@
 </header>
 <nav class="nav-mobile">
     <a href="cesar.html">Home</a>
-    <a  href="artigos.html">Matérias</a>
-    <a href="artigosAcademicos.html">Artigos Acadêmicos</a>
+    <a  href="artigos.html">Artigos</a>
     <a href="sobremim.html">Sobre mim</a>
     <a  href="contato.html">Contato</a>
      <a class="modal-login">Login/Registro</a>
@@ -107,18 +106,18 @@
 <div class="footer-box">
     <div class="social-box">
       <ul class="social-links-footer">
-        <li><a class="footer-img"  href="https://github.com/caiolombello" target="_blank"><img src="/img/instagram(semfundo).png"></i></a></li>
-        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/tiktok.png"></a></li>
-        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/youtube(semfundo).png"></a></li>
-        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/twitter.png"></a></li>
-        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/medium(semfundo).png"></a></li>
-        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/linkedin.png"></a></li>
-        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/c(semfundo).png"></a></li>
-        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/id(semfundo).png"></a></li>
-        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/a(semfundoo).png"></a></li>
-        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/gmail.png"></a></li>
-        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/discord.png"></a></li>
-        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/playstation.png"></a></li>
+        <li><a class="footer-img"  href="https://github.com/caiolombello" target="_blank"><img src="/templates/img/instagram(semfundo).png"></i></a></li>
+        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/tiktok.png"></a></li>
+        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/youtube(semfundo).png"></a></li>
+        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/twitter.png"></a></li>
+        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/medium(semfundo).png"></a></li>
+        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/linkedin.png"></a></li>
+        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/c(semfundo).png"></a></li>
+        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/id(semfundo).png"></a></li>
+        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/a(semfundoo).png"></a></li>
+        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/gmail.png"></a></li>
+        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/discord.png"></a></li>
+        <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/playstation.png"></a></li>
 
 
       </ul>
