--- a/Templates/cesar.html
+++ b/Templates/cesar.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/css/header.css">
-        <link rel="stylesheet" href="/css/media(mobile).css">
-        <link rel="stylesheet" href="/css/media(tablet).css">
-        <link rel="stylesheet" href="/css/posts.css">
-        <link rel="stylesheet" href="/css/footer.css">
-        <link rel="stylesheet" href="/css/artigos.css">
-        <link rel="stylesheet" href="/css/contato.css">
-        <link rel="stylesheet" href="/css/sobremim.css">
+        <link rel="stylesheet" href="/templates/css/header.css">
+        <link rel="stylesheet" href="/templates/css/media(mobile).css">
+        <link rel="stylesheet" href="/templates/css/media(tablet).css">
+        <link rel="stylesheet" href="/templates/css/posts.css">
+        <link rel="stylesheet" href="/templates/css/footer.css">
+        <link rel="stylesheet" href="/templates/css/artigos.css">
+        <link rel="stylesheet" href="/templates/css/contato.css">
+        <link rel="stylesheet" href="/templates/css/sobremim.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
 
@@ -42,7 +42,7 @@
 
 <div class="nav-text">
 <a class="cesar" href="#">
-    <img id="logo-img" src="/img/site(logo).png">
+    <img id="logo-img" src="/templates/img/site(logo).png">
 </a> </div>
 
 
@@ -97,7 +97,7 @@
         <div class="div-text1">
         <div class="post-container2-img">
         
-        <img src="/img/download.jpeg">
+        <img src="/templates/img/download.jpeg">
     </div>
     </div>
         <div class="div-text2">
@@ -158,7 +158,7 @@
                 <div class="div-text1">
                 <div class="post-container2-img">
                 
-                <img src="/img/download.jpeg">
+                <img src="/templates/img/download.jpeg">
             </div>
             </div>
                 <div class="div-text2">
@@ -183,10 +183,10 @@
                         </div>
                         <div class="post2-comentarios">
         
-                           <div class="comentario-box"> <img src="img/comment (2).png"></div>
+                           <div class="comentario-box"> <img src="/templates/img/comment (2).png"></div>
                             <div id="main-comentario">
                                 <label for="comentario">Deixe seu comentário:</label>
-                                <textarea class="input_comentario" name="comentario"></textarea><img src="img/send.png">
+                                <textarea class="input_comentario" name="comentario"></textarea><img src="/templates/img/send.png">
                         </div>
             </div>
             </div>
@@ -230,18 +230,18 @@
     <div class="social-box">
    
         <ul class="social-links-footer">
-          <li><a class="footer-img"  href="https://github.com/caiolombello" target="_blank"><img src="/img/instagram(semfundo).png"></i></a></li>
-          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/tiktok.png"></a></li>
-          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/youtube(semfundo).png"></a></li>
-          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/twitter.png"></a></li>
-          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/medium(semfundo).png"></a></li>
-          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/linkedin.png"></a></li>
-          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/c(semfundo).png"></a></li>
-          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/id(semfundo).png"></a></li>
-          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/a(semfundoo).png"></a></li>
-          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/gmail.png"></a></li>
-          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/discord.png"></a></li>
-          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/img/playstation.png"></a></li>
+          <li><a class="footer-img"  href="https://github.com/caiolombello" target="_blank"><img src="/templates/img/instagram(semfundo).png"></i></a></li>
+          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/tiktok.png"></a></li>
+          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/youtube(semfundo).png"></a></li>
+          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/twitter.png"></a></li>
+          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/medium(semfundo).png"></a></li>
+          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/linkedin.png"></a></li>
+          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/c(semfundo).png"></a></li>
+          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/id(semfundo).png"></a></li>
+          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/a(semfundoo).png"></a></li>
+          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/gmail.png"></a></li>
+          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/discord.png"></a></li>
+          <li><a class="footer-img" href="https://discordapp.com/users/270988011066359808" target="_blank"><img src="/templates/img/playstation.png"></a></li>
 
 
         </ul>
