hrefs que ficaram para trás

--- a/Templates/artigos.html
+++ b/Templates/artigos.html
@@ -24,7 +24,7 @@
 <ul class="menu-ul">
     <li><a href="cesar.html">Home</a></li>
     <li><a href="artigos.html">Matérias</a></li>
-    <li><a href="artigos.html">Artigos Acadêmicos</a></li>
+    <li><a href="artigosAcademicos.html">Artigos Acadêmicos</a></li>
     <li><a href="sobremim.html">Sobre mim</a></li>
     <li><a href="contato.html">Contato</a></li>
     <li><a class="modal-login" href="#">Login/Registrar-se</a></li>
