--- a/Templates/artigosAcademicos.html
+++ b/Templates/artigosAcademicos.html
@@ -43,7 +43,7 @@
 
 <div class="nav-text">
 <a class="cesar" href="#">
-    <img id="logo-img" src="/img/site(logo).png">
+    <img id="logo-img" src="/templates/img/site(logo).png">
 </a> </div>
 
 
@@ -53,6 +53,8 @@
 <nav class="nav-mobile">
     <a href="cesar.html">Home</a>
     <a  href="artigos.html">Artigos</a>
+    <a  href="artigosAcademicos.html">Artigos</a>
+
     <a href="sobremim.html">Sobre mim</a>
     <a  href="contato.html">Contato</a>
      <a class="modal-login">Login/Registro</a>
