--- a/Templates/cesar.html
+++ b/Templates/cesar.html
@@ -122,7 +122,139 @@
                 </div>
                 <div class="post2-comentarios">
 
-                   <div class="comentario-box"> <img src="img/comment (2).png"></div>
+                   <div class="comentario-box"> <img src="img/comment (2).png">
+                    <li>
+                       <div class="comentario-parte1"> <span class="comentario-img">
+                            <img src="/templates/img/discord.png">
+                        </span>
+                        <span class="comentario-nome"> 
+                            Thiago Neves
+                        </span>
+                                <span class="comentario-data">10 de Junho
+                                </span> </div>
+                                <span> </span>
+                                <span class="comentario-texto">
+                                    Kfksalkfaslfkas
+                                    fsalkfsalkfsa
+                                    flaskf
+                                </span>
+                           <div class="comentario-parte2">
+                            <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                                Responder
+                            </span>
+                            
+                        </div>
+                    </li>
+                    <li>
+                        <div class="comentario-parte1"> <span class="comentario-img">
+                             <img src="/templates/img/discord.png">
+                         </span>
+                         <span class="comentario-nome"> 
+                             Thiago Neves
+                         </span>
+                                 <span class="comentario-data">10 de Junho
+                                 </span> </div>
+                                 <span> </span>
+                                 <span class="comentario-texto">
+                                     Kfksalkfaslfkas
+                                     fsalkfsalkfsa
+                                     flaskf
+                                 </span>
+                            <div class="comentario-parte2">
+                             <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                                 Responder
+                             </span>
+                             
+                         </div>
+                     </li>
+                     <li>
+                        <div class="comentario-parte1"> <span class="comentario-img">
+                             <img src="/templates/img/discord.png">
+                         </span>
+                         <span class="comentario-nome"> 
+                             Thiago Neves
+                         </span>
+                                 <span class="comentario-data">10 de Junho
+                                 </span> </div>
+                                 <span> </span>
+                                 <span class="comentario-texto">
+                                     Kfksalkfaslfkas
+                                     fsalkfsalkfsa
+                                     flaskf
+                                 </span>
+                            <div class="comentario-parte2">
+                             <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                                 Responder
+                             </span>
+                             
+                         </div>
+                     </li>
+                     <li>
+                        <div class="comentario-parte1"> <span class="comentario-img">
+                             <img src="/templates/img/discord.png">
+                         </span>
+                         <span class="comentario-nome"> 
+                             Thiago Neves
+                         </span>
+                                 <span class="comentario-data">10 de Junho
+                                 </span> </div>
+                                 <span> </span>
+                                 <span class="comentario-texto">
+                                     Kfksalkfaslfkas
+                                     fsalkfsalkfsa
+                                     flaskf
+                                 </span>
+                            <div class="comentario-parte2">
+                             <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                                 Responder
+                             </span>
+                             
+                         </div>
+                     </li>
+                     <li>
+                        <div class="comentario-parte1"> <span class="comentario-img">
+                             <img src="/templates/img/discord.png">
+                         </span>
+                         <span class="comentario-nome"> 
+                             Thiago Neves
+                         </span>
+                                 <span class="comentario-data">10 de Junho
+                                 </span> </div>
+                                 <span> </span>
+                                 <span class="comentario-texto">
+                                     Kfksalkfaslfkas
+                                     fsalkfsalkfsa
+                                     flaskf
+                                 </span>
+                            <div class="comentario-parte2">
+                             <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                                 Responder
+                             </span>
+                             
+                         </div>
+                     </li>
+                     <li>
+                        <div class="comentario-parte1"> <span class="comentario-img">
+                             <img src="/templates/img/discord.png">
+                         </span>
+                         <span class="comentario-nome"> 
+                             Thiago Neves
+                         </span>
+                                 <span class="comentario-data">10 de Junho
+                                 </span> </div>
+                                 <span> </span>
+                                 <span class="comentario-texto">
+                                     Kfksalkfaslfkas
+                                     fsalkfsalkfsa
+                                     flaskf
+                                 </span>
+                            <div class="comentario-parte2">
+                             <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                                 Responder
+                             </span>
+                             
+                         </div>
+                     </li></div>
                     <div id="main-comentario">
                         <label for="comentario">Deixe seu comentário:</label>
                         <textarea class="input_comentario" name="comentario"></textarea><img src="img/send.png">
@@ -183,7 +315,24 @@
                         </div>
                         <div class="post2-comentarios">
         
-                           <div class="comentario-box"> <img src="/templates/img/comment (2).png"></div>
+                           <div class="comentario-box"> <img src="/templates/img/comment (2).png">
+                        <li>
+                            <span class="comentario-img">
+                                <span>
+                            <span class="comentario-nome"> 
+                                Thiago Neves
+                                <span>
+                                    <span class="comentario-data">
+                                    </span>
+                                    <span class="comentario-texto">
+                                    </span>
+                                <span class="comentario-responder">
+                                </span>
+                        </li>
+                        <li>
+                        </li>
+
+                        </div>
                             <div id="main-comentario">
                                 <label for="comentario">Deixe seu comentário:</label>
                                 <textarea class="input_comentario" name="comentario"></textarea><img src="/templates/img/send.png">
