--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
    <head>
+      {% block 'css' %}{% endblock  %}
       <link rel="stylesheet" href="{% static 'base/css/header.css' %}">
       <link rel="stylesheet" href="{% static 'base/css/media(mobile).css' %}">
       <link rel="stylesheet" href="{% static 'base/css/media(tablet).css' %}">
@@ -136,7 +137,7 @@
         </div>
      </div>
      {% block 'js' %}{% endblock  %}
-     <script src="{% static 'base/js/app.js' %}"></script>
+     
      <script src="https://kit.fontawesome.com/9331f17a29.js" crossorigin="anonymous"></script>
   </body>
 </html>
