--- a/Templates/cesar.html
+++ b/Templates/cesar.html
@@ -86,6 +86,141 @@
               Integer nec faucibus ipsum, non imperdiet magna. In maximus accumsan elit ac condimentum.</p>
               <div class="ler-mais-div">
  <a class="ler-mais">Ler mais...</a>
+ <div class="add-comentario-box"><img src="/templates/img/message (1).png">
+ </div>
+ <div class="comentario-box"> <img src="img/comment (2).png">
+    <li>
+       <div class="comentario-parte1"> <span class="comentario-img">
+            <img src="/templates/img/discord.png">
+        </span>
+        <span class="comentario-nome"> 
+            Thiago Neves
+        </span>
+                <span class="comentario-data">10 de Junho
+                </span> </div>
+                <span> </span>
+                <span class="comentario-texto">
+                    Kfksalkfaslfkas
+                    fsalkfsalkfsa
+                    flaskf
+                </span>
+           <div class="comentario-parte2">
+            <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                Responder
+            </span>
+            
+        </div>
+    </li>
+    <li>
+        <div class="comentario-parte1"> <span class="comentario-img">
+             <img src="/templates/img/discord.png">
+         </span>
+         <span class="comentario-nome"> 
+             Thiago Neves
+         </span>
+                 <span class="comentario-data">10 de Junho
+                 </span> </div>
+                 <span> </span>
+                 <span class="comentario-texto">
+                     Kfksalkfaslfkas
+                     fsalkfsalkfsa
+                     flaskf
+                 </span>
+            <div class="comentario-parte2">
+             <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                 Responder
+             </span>
+             
+         </div>
+     </li>
+     <li>
+        <div class="comentario-parte1"> <span class="comentario-img">
+             <img src="/templates/img/discord.png">
+         </span>
+         <span class="comentario-nome"> 
+             Thiago Neves
+         </span>
+                 <span class="comentario-data">10 de Junho
+                 </span> </div>
+                 <span> </span>
+                 <span class="comentario-texto">
+                     Kfksalkfaslfkas
+                     fsalkfsalkfsa
+                     flaskf
+                 </span>
+            <div class="comentario-parte2">
+             <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                 Responder
+             </span>
+             
+         </div>
+     </li>
+     <li>
+        <div class="comentario-parte1"> <span class="comentario-img">
+             <img src="/templates/img/discord.png">
+         </span>
+         <span class="comentario-nome"> 
+             Thiago Neves
+         </span>
+                 <span class="comentario-data">10 de Junho
+                 </span> </div>
+                 <span> </span>
+                 <span class="comentario-texto">
+                     Kfksalkfaslfkas
+                     fsalkfsalkfsa
+                     flaskf
+                 </span>
+            <div class="comentario-parte2">
+             <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                 Responder
+             </span>
+             
+         </div>
+     </li>
+     <li>
+        <div class="comentario-parte1"> <span class="comentario-img">
+             <img src="/templates/img/discord.png">
+         </span>
+         <span class="comentario-nome"> 
+             Thiago Neves
+         </span>
+                 <span class="comentario-data">10 de Junho
+                 </span> </div>
+                 <span> </span>
+                 <span class="comentario-texto">
+                     Kfksalkfaslfkas
+                     fsalkfsalkfsa
+                     flaskf
+                 </span>
+            <div class="comentario-parte2">
+             <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                 Responder
+             </span>
+             
+         </div>
+     </li>
+     <li>
+        <div class="comentario-parte1"> <span class="comentario-img">
+             <img src="/templates/img/discord.png">
+         </span>
+         <span class="comentario-nome"> 
+             Thiago Neves
+         </span>
+                 <span class="comentario-data">10 de Junho
+                 </span> </div>
+                 <span> </span>
+                 <span class="comentario-texto">
+                     Kfksalkfaslfkas
+                     fsalkfsalkfsa
+                     flaskf
+                 </span>
+            <div class="comentario-parte2">
+             <span class="like">a</span> <span class="dislike">b</span><span class="comentario-responder">
+                 Responder
+             </span>
+             
+         </div>
+     </li></div>
 </div>
 </div>
 </div>
@@ -120,6 +255,8 @@
                     <h3>[link da matéria]</h3> <h3>Fonte: Jornalista/O globo</h3>
                    </div>
                 </div>
+
+             
                 <div class="post2-comentarios">
 
                    <div class="comentario-box"> <img src="img/comment (2).png">
@@ -249,13 +386,15 @@
                                      flaskf
                                  </span>
                             <div class="comentario-parte2">
-                             <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                             <span class="like">a</span> <span class="dislike">b</span><span class="comentario-responder">
                                  Responder
                              </span>
                              
                          </div>
                      </li></div>
-                    <div id="main-comentario">
+                     <div class="add-comentario-box"><img src="/templates/img/message (1).png">
+                     </div>
+                    <div class="main-comentario">
                         <label for="comentario">Deixe seu comentário:</label>
                         <textarea class="input_comentario" name="comentario"></textarea><img src="img/send.png">
                 </div>
@@ -315,27 +454,142 @@
                         </div>
                         <div class="post2-comentarios">
         
-                           <div class="comentario-box"> <img src="/templates/img/comment (2).png">
-                        <li>
-                            <span class="comentario-img">
-                                <span>
-                            <span class="comentario-nome"> 
-                                Thiago Neves
-                                <span>
-                                    <span class="comentario-data">
-                                    </span>
-                                    <span class="comentario-texto">
-                                    </span>
-                                <span class="comentario-responder">
+                           <div class="comentario-box"> <img src="img/comment (2).png">
+                            <li>
+                               <div class="comentario-parte1"> <span class="comentario-img">
+                                    <img src="/templates/img/discord.png">
                                 </span>
-                        </li>
-                        <li>
-                        </li>
-
-                        </div>
-                            <div id="main-comentario">
+                                <span class="comentario-nome"> 
+                                    Thiago Neves
+                                </span>
+                                        <span class="comentario-data">10 de Junho
+                                        </span> </div>
+                                        <span> </span>
+                                        <span class="comentario-texto">
+                                            Kfksalkfaslfkas
+                                            fsalkfsalkfsa
+                                            flaskf
+                                        </span>
+                                   <div class="comentario-parte2">
+                                    <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                                        Responder
+                                    </span>
+                                    
+                                </div>
+                            </li>
+                            <li>
+                                <div class="comentario-parte1"> <span class="comentario-img">
+                                     <img src="/templates/img/discord.png">
+                                 </span>
+                                 <span class="comentario-nome"> 
+                                     Thiago Neves
+                                 </span>
+                                         <span class="comentario-data">10 de Junho
+                                         </span> </div>
+                                         <span> </span>
+                                         <span class="comentario-texto">
+                                             Kfksalkfaslfkas
+                                             fsalkfsalkfsa
+                                             flaskf
+                                         </span>
+                                    <div class="comentario-parte2">
+                                     <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                                         Responder
+                                     </span>
+                                     
+                                 </div>
+                             </li>
+                             <li>
+                                <div class="comentario-parte1"> <span class="comentario-img">
+                                     <img src="/templates/img/discord.png">
+                                 </span>
+                                 <span class="comentario-nome"> 
+                                     Thiago Neves
+                                 </span>
+                                         <span class="comentario-data">10 de Junho
+                                         </span> </div>
+                                         <span> </span>
+                                         <span class="comentario-texto">
+                                             Kfksalkfaslfkas
+                                             fsalkfsalkfsa
+                                             flaskf
+                                         </span>
+                                    <div class="comentario-parte2">
+                                     <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                                         Responder
+                                     </span>
+                                     
+                                 </div>
+                             </li>
+                             <li>
+                                <div class="comentario-parte1"> <span class="comentario-img">
+                                     <img src="/templates/img/discord.png">
+                                 </span>
+                                 <span class="comentario-nome"> 
+                                     Thiago Neves
+                                 </span>
+                                         <span class="comentario-data">10 de Junho
+                                         </span> </div>
+                                         <span> </span>
+                                         <span class="comentario-texto">
+                                             Kfksalkfaslfkas
+                                             fsalkfsalkfsa
+                                             flaskf
+                                         </span>
+                                    <div class="comentario-parte2">
+                                     <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                                         Responder
+                                     </span>
+                                     
+                                 </div>
+                             </li>
+                             <li>
+                                <div class="comentario-parte1"> <span class="comentario-img">
+                                     <img src="/templates/img/discord.png">
+                                 </span>
+                                 <span class="comentario-nome"> 
+                                     Thiago Neves
+                                 </span>
+                                         <span class="comentario-data">10 de Junho
+                                         </span> </div>
+                                         <span> </span>
+                                         <span class="comentario-texto">
+                                             Kfksalkfaslfkas
+                                             fsalkfsalkfsa
+                                             flaskf
+                                         </span>
+                                    <div class="comentario-parte2">
+                                     <span class="like"><i class="fa-solid fa-thumbs-up" style="color: #ffffff;"></i></span> <span class="dislike"><i class="fa-solid fa-thumbs-down" style="color: #ffffff;"></i></span><span class="comentario-responder">
+                                         Responder
+                                     </span>
+                                     
+                                 </div>
+                             </li>
+                             <li>
+                                <div class="comentario-parte1"> <span class="comentario-img">
+                                     <img src="/templates/img/discord.png">
+                                 </span>
+                                 <span class="comentario-nome"> 
+                                     Thiago Neves
+                                 </span>
+                                         <span class="comentario-data">10 de Junho
+                                         </span> </div>
+                                         <span> </span>
+                                         <span class="comentario-texto">
+                                             Kfksalkfaslfkas
+                                             fsalkfsalkfsa
+                                             flaskf
+                                         </span>
+                                    <div class="comentario-parte2">
+                                     <span class="like">a</span> <span class="dislike">b</span><span class="comentario-responder">
+                                         Responder
+                                     </span>
+                                     
+                                 </div>
+                             </li></div>
+                            <div class="main-comentario">
                                 <label for="comentario">Deixe seu comentário:</label>
-                                <textarea class="input_comentario" name="comentario"></textarea><img src="/templates/img/send.png">
+                                <textarea class="input_comentario" name="comentario"></textarea><img src="img/send.png">
                         </div>
             </div>
             </div>
@@ -401,21 +655,26 @@
 </div>
 
 </footer>
-<div class="modal-main-comentario">
-    <div class="modal-comentario">
-        <button class="fechar-comentario">x</button>
-        <ul>
-            <li>
-                aaaa
-            </li>
+<div class="modal-main-resposta">
+    <div class="modal-resposta">
+        <button class="modal-resposta-fechar">x</button>
+        <div class="comment-section">
+            <div class="comment">
+                <img src="avatar.png" alt="avatar" class="avatar">
+                <div class="content">
+                    <h3 class="username">User Name</h3>
+                    <p class="comment-text">This is a comment.</p>
+                </div>
+            </div>
         
-            <li>
-                aaaa
-            </li>
-            <li>
-                aaaa
-            </li>
-        </ul>
+            <div class="reply">
+                <img src="avatar.png" alt="avatar" class="avatar">
+                <div class="content">
+                    <h3 class="username">User Name</h3>
+                    <input class="reply-input" type="text" placeholder="Write a reply...">
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <div class="modal-container">
@@ -458,6 +717,25 @@
     
   </div>
   </div>
+  <div class="modal-add-comentario"> 
+    <div class="modal-main-comentario">
+        <button class="fechar_modal_comentario">x</button>
+    <div class="modal-comentario">
+    <div class="modal-comentario-header">
+      <img src="url_da_imagem" alt="user profile picture">
+      <h2>Nome da Postagem</h2>
+    </div>
+    <div class="post-content">
+      Conteúdo da postagem
+    </div>
+    <div>
+      <input class="comment-box" type="text" placeholder="Adicione um comentário..."/>
+    </div>
+  </div>
+</div>
+  </div>
+  
+</div>
 
 <script src="app.js"></script>
 <script src="https://kit.fontawesome.com/9331f17a29.js" crossorigin="anonymous"></script>
