--- a/Templates/css/header.css
+++ b/Templates/css/header.css
@@ -619,7 +619,7 @@ form label
   padding:5px;
 }
 
-.modal-main-comentario
+.modal-main-resposta
 {
   width: 100vw;
   height: 100vh;
@@ -632,21 +632,44 @@ form label
   background-color: rgba(0,0,0, .5);
   z-index: 999999;
 }
-.modal-comentario
+.modal-main-resposta.is-active
+{
+  display:flex;
+}
+.modal-resposta
 {
   background-color: #2a2a2d;
-  width:60%;
-  min-width: 250px;
+  width:40%;
+  min-width: 200px;
   padding: 1em;
-  text-align: start;
+  text-align: center;
   border:2px solid #ffffff;
   position: relative;
   box-shadow: 10px 10px #000;
   height:20rem;
   border-radius: .6rem;
+  display:flex;
+  flex-direction:column;
+  margin:auto;
 
 }
-.modal-comentario ul
+.modal-resposta-fechar
+{
+  position: absolute;
+
+  top:-20;
+  right:-20;
+  width:2em;
+  height:2em;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  background-color: rgb(54, 54, 54);
+  font-size:1.3em;
+  cursor:pointer;
+  box-shadow: 0 4px 4px 0 rgba(0,0,0,.3);
+  color:#fff;
+}
+.modal-resposta ul
 {
   display: flex;
   justify-content: center;
@@ -667,4 +690,78 @@ form label
   cursor:pointer;
   box-shadow: 0 4px 4px 0 rgba(0,0,0,.3);
   color:#fff;
+}
+
+
+
+.modal-comentario-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.modal-comentario-header img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.post-content {
+  margin-bottom: 10px;
+}
+.comment-box {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+}
+.modal-add-comentario
+{
+  width:100vw;
+  height:100vh;
+ background-color:rgba(0,0,0, .5);
+ display: none;
+ justify-content: center;
+ align-items: center;
+ z-index: 99999;
+ text-align: center;
+  position:fixed;
+  top:0;
+  left:0;
+}
+.modal-add-comentario.is-active
+{
+  display:flex;
+}
+.modal-main-comentario
+{
+  background-color: #2a2a2d;
+  width:60%;
+  min-width: 250px;
+  padding: 1em;
+  text-align: start;
+  border:2px solid #ffffff;
+  position: relative;
+  box-shadow: 10px 10px #000;
+  border-radius:12px;
+}
+.fechar_modal_comentario
+{
+  position: absolute;
+
+  top:-20;
+  right:-20;
+  width:2em;
+  height:2em;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  background-color: rgb(54, 54, 54);
+  font-size:1.3em;
+  cursor:pointer;
+  box-shadow: 0 4px 4px 0 rgba(0,0,0,.3);
+  color:#fff;
+}
+.modal-main-comentario h2
+
+{
+  font-size:1.5rem;
 }
