--- a/Templates/css/posts.css
+++ b/Templates/css/posts.css
@@ -18,6 +18,7 @@
     flex-direction: column;
    
 }
+
 .div-text
 {
 width:100%;
@@ -67,6 +68,41 @@ justify-content: center;
     padding:0.5rem;
     display: inline-block;
     box-shadow: 10px 10px #000;
+    position:relative;
+    
+}
+.post-box .comentario-box
+{
+  display:none;
+}
+
+.post-box.is-active
+{
+  height:20rem;
+}
+.post-box.is-active .add-comentario-box
+{
+  display:block;
+}
+.post-box.is-active .comentario-box
+{
+  display:block;
+  bottom:5px;
+}
+.post .comentario-box.is-active
+{
+  
+  bottom:-9rem;
+  
+}
+.post .add-comentario-box
+{
+  bottom:5px;
+  right:6rem; 
+}
+.post-box.is-active .ler-mais
+{
+  display:none;
 }
 .post-box p
 {
@@ -198,6 +234,7 @@ justify-content: center;
 
 .post-container2 img
 {
+    object-fit:cover;
     width:100%;
     height:100%;
 
@@ -246,6 +283,21 @@ justify-content: center;
   max-height: 4rem;
   position: absolute;
   
+}
+.add-comentario-box
+
+{
+  border:2px #fff solid;
+  padding:1rem;
+  box-shadow: 5px 5px #000;
+  cursor: pointer;
+  max-height: 4rem;
+  position: absolute;
+  display:none;
+}
+.add-comentario-box img
+{
+  height: 2rem;
 }
 .comentario-box li
 {
@@ -297,10 +349,14 @@ justify-content: center;
   width:24.5rem;
   height:20rem;
   max-height: 30rem !important;
-  left:-2.3rem;
   background-color: #2a2a2d;
   overflow-y: scroll;
+  z-index:2;
   
+}
+.post2 .comentario-box.is-active
+{
+  left:-2.3rem;
 }
 .comentario-parte1
 {
@@ -314,7 +370,7 @@ justify-content: center;
 display:block;
 align-items:center;
 width:100%; 
-margin-bottom: 2rem;
+margin-bottom: 3rem;
   
 }
 .comentario-box.is-active::-webkit-scrollbar-track {
@@ -341,7 +397,7 @@ margin-bottom: 2rem;
 }
 
 
-#main-comentario
+.main-comentario
 {
   width:85%;
  border: solid #e9e9e9 2px;
@@ -356,16 +412,16 @@ margin-bottom: 2rem;
  margin-left:10rem;
 
 }
-.body-night #main-comentario
+.body-night .main-comentario
 {
   border:#000 solid 2px;
   box-shadow: 5px 5px #3c3c3c;
 }
-.body-night #main-comentario label
+.body-night .main-comentario label
 {
   font-weight: 600;
 }
-#main-comentario img
+.main-comentario img
 {
   height: 1.8rem;
   cursor: pointer;
@@ -382,10 +438,11 @@ margin-bottom: 2rem;
   margin-top:.8rem;
   width:92%;
   height:1.6rem;
-  padding:.3rem;    
+  padding:.3rem;
+  resize:none;    
 
 }
-#main-comentario label
+.main-comentario label
 {
   font-size:.8rem;
   text-align: left;
@@ -402,7 +459,7 @@ margin-bottom: 2rem;
   
 
 }
-#main-comentario.is-active
+.main-comentario.is-active
 {
   height: 12rem !important;
   max-height: 12rem !important;
@@ -423,4 +480,55 @@ margin-bottom: 2rem;
 .comentario-parte2 span
 {
   margin: 0 1rem;
+}
+.resposta-do-comentario
+{
+  resize:none;
+  outline:none;
+  border:none;
+  border-radius:5px;
+  height:60%;
+  width:60%;
+  background-color:#a7a7a7;
+ margin:auto;
+}
+.comentario-box img
+{
+  height:2rem;
+}
+
+
+
+
+.comment-section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.comment, .reply {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.reply {
+  margin-left: 40px;
+}
+
+.avatar {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.username {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.reply-input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
