--- a/blog/templates/blog/cesar.html
+++ b/blog/templates/blog/cesar.html
@@ -525,7 +525,8 @@
                             </div>
                             <div class="post2-comentarios">
             
-                               <div class="comentario-box"> <img src="{%static "/base/img/comment (2).png" %}">
+                                <div class="add-comentario-box"><img src="{%static "/base/img/message (1).png"%}">
+                                </div><div class="comentario-box"> <img src="{%static "/base/img/comment (2).png" %}">
                                 <li>
                                    <div class="comentario-parte1"> <span class="comentario-img">
                                         <img src="/templates/img/discord.png">
@@ -874,7 +875,8 @@
         <div class="modal-video">
            
     <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
-        <div class="wistia_responsive_wrapper" style="height: 30rem;top:0;width: 30rem;margin: auto; position:relative">
+        <div class="wistia_responsive_wrapper" style="height: 30rem;top:0;width: 30rem;margin: auto; position:relative;
+     }">
             <button class="fechar-modal-video" style="
             position: absolute;
             top: -15px;
