--- a/templates/static/base/css/posts.css
+++ b/templates/static/base/css/posts.css
@@ -67,7 +67,7 @@ justify-content: center;
     border: solid #fff 2px;
     padding:0.5rem;
     display: inline-block;
-    box-shadow: 10px 10px #000;
+    box-shadow: 7px 7px #000;
     position:relative;
     
 }
@@ -79,6 +79,7 @@ justify-content: center;
 .post-box.is-active
 {
   height:20rem;
+  min-height:25rem;
 }
 .post-box.is-active .add-comentario-box
 {
