--- a/blog/templates/blog/artisgosAcademicos.html
+++ b/blog/templates/blog/artisgosAcademicos.html
@@ -9,26 +9,32 @@
       <div class="grid-container">
          <div class="grid-item">
             <div class="title">Título</div>
+            <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
             <div class="description">description</div>
          </div>
          <div class="grid-item">
             <div class="title">Título</div>
+            <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
             <div class="description">description</div>
          </div>
          <div class="grid-item">
             <div class="title">Título</div>
+            <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
             <div class="description">description</div>
          </div>
          <div class="grid-item">
             <div class="title">Título</div>
+            <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
             <div class="description">description</div>
          </div>
          <div class="grid-item">
             <div class="title">Título</div>
+            <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
             <div class="description">description</div>
          </div>
          <div class="grid-item">
             <div class="title">Título</div>
+            <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
             <div class="description">description</div>
          </div>
       </div>
