--- a/templates/static/base/css/artigos.css
+++ b/templates/static/base/css/artigos.css
@@ -69,6 +69,15 @@
 
 
 }
+.grid-item img
+{ 
+  width:100%;
+  height:100%;
+  background-size:cover;
+  background-position-x:center;
+  background-position-y:center;
+  background-repeat:no-repeat;
+}
 /*///////////////////PAGINATION///////////////////////*/
 h2 {
   text-align: center;
