--- a/blog/templates/blog/artigos.html
+++ b/blog/templates/blog/artigos.html
@@ -9,32 +9,44 @@
       <div class="grid-container">
          <div class="grid-item">
             <div class="title">Título</div>
-            <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
+            <a href="#">
+               <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
+               </a>
             <div class="description">description</div>
          </div>
          <div class="grid-item">
             <div class="title">Título</div>
+            <a href="#">
             <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
+            </a>
             <div class="description">description</div>
          </div>
          <div class="grid-item">
             <div class="title">Título</div>
-            <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
+            <a href="#">
+               <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
+               </a>
             <div class="description">description</div>
          </div>
          <div class="grid-item">
             <div class="title">Título</div>
-            <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
+            <a href="#">
+               <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
+               </a>
             <div class="description">description</div>
          </div>
          <div class="grid-item">
             <div class="title">Título</div>
-            <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
+            <a href="#">
+               <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
+               </a>
             <div class="description">description</div>
          </div>
          <div class="grid-item">
             <div class="title">Título</div>
-            <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
+            <a href="#">
+               <img class="grid-img" src="{%static "base/img/tiktok.png" %}">
+               </a>
             <div class="description">description</div>
          </div>
       </div>
