--- a/templates/static/base/css/artigos.css
+++ b/templates/static/base/css/artigos.css
@@ -1,31 +1,39 @@
 /*///////////////////////////GRID-CONTAINER////////////////////////////*/
-.grid-main-container
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 5rem 0;
 
-}
 .grid-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap:11%;
-  row-gap: 22%;
+  row-gap: 15%;
   width:75%;
-  height: 45rem;
+  margin:4rem auto;
+  grid-auto-flow: row dense;
+  overflow:hidden;
 }
+
 .grid-item {
-  background-color: #444;
-  color: #fff;
-  display: flex;
+
+  height:10rem;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  margin:auto;
+  margin:.3rem;
+
+  
+ 
+}
+.grid-item-container
+{
+  justify-content: center;
+  align-items: center;
+  display:inline-block;
   justify-content: center;
   align-items: center;
   font-size: 20px;
-  padding:12px;
-  position: relative;
-  
- 
+  position:relative;
+  border: solid #fff 2px;
+
 }
 .grid-item .title
 {
@@ -39,16 +47,7 @@
   bottom: -3.5rem;
   display: inline-block;
 }
-.grid-item::before
-{
-  content: "";
-  position: absolute;
-  top:-1.3rem;
-  right:-1.3rem;
-  left:-1.3rem;
-  bottom:-1.3rem;
-  border: solid #fff 2px;
-}
+
 .body-night .grid-item::before
 {
   border:solid #000 2px;
@@ -73,10 +72,10 @@
 { 
   width:100%;
   height:100%;
-  background-size:cover;
-  background-position-x:center;
-  background-position-y:center;
-  background-repeat:no-repeat;
+  max-height:140px;
+  min-width:2rem;
+  
+
 }
 /*///////////////////PAGINATION///////////////////////*/
 h2 {
@@ -93,10 +92,7 @@ h2 span {
 }
 
 .pagination {
-  position: absolute;
-  bottom:0;
-  left:50%;
-  transform: translate(-50%, -50%);
+  
   margin: 0;
   padding: .8rem;
   border-radius: 40px;
@@ -148,13 +144,11 @@ h2 span {
 
 .pagination-div
 {
-  position: relative;
+  
   width:100%;
   display: flex;
   justify-content: center;
-  padding-top: 7rem;
-}
-.grid-section
-{
-    padding-bottom: 2rem;
+
+  margin-top:10rem;
+  overflow:hidden;
 }
