--- a/templates/static/base/css/media(mobile).css
+++ b/templates/static/base/css/media(mobile).css
@@ -56,8 +56,9 @@
 }
 .grid-container {
 
-    grid-template-columns: repeat(2, 1fr) !important;
-    column-gap:20% !important;
+    grid-template-columns:1fr !important;
+    row-gap:5% !important;
+
 
 
   }
@@ -94,10 +95,7 @@
     margin-right: 0 !important;
 }
 
-.pagination-div
-{
-    padding-top: 8rem !important;
-}
+
 
 .grid-section
 {
